# acid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
3rdlibs/: CMakeLists.txt
3rdlibs/GLAD/include/glad/: glad.h
3rdlibs/GLAD/src/: glad.c
3rdlibs/ImGui/: CMakeLists.txt
acid/: CMakeLists.txt
acid/include/: acid.hpp
acid/include/ImGui/: imgui_utils.hpp
acid/include/app/: application.hpp  render_engine.hpp
acid/include/core/: assert.hpp  base.hpp  core.hpp  log.hpp
acid/include/engine/: application.hpp  engine.hpp
acid/include/geometry/: cuboid.hpp  geo.hpp  mesh.hpp  model.hpp
acid/include/platform/OpenGL/: opengl_buffer.hpp  opengl_graphic_context.hpp  opengl_renderer_api.hpp  opengl_shader.hpp  opengl_texture.hpp  opengl_vertex_array.hpp
acid/include/renderer/: buffer.hpp  graphic_api.hpp  graphic_context.hpp  renderer.hpp  renderer2d.hpp  renderer3d.hpp  renderer_api.hpp  renderer_command.hpp  renderer_enum.hpp  shader.hpp  texture.hpp  vertex.hpp  vertex_array.hpp
acid/include/renderer/camera/: camera.hpp  scene_camera.hpp
acid/include/renderer/light/: light.hpp  material.hpp
acid/include/scene/: scene.hpp
acid/include/window/: window.hpp
acid/src/: test.cpp  texture.cpp
acid/src/ImGui/: imgui_build.cpp  imgui_utils.cpp
acid/src/app/: application.cpp  render_engine.cpp
acid/src/core/: main.cpp  placeholder.cpp
acid/src/engine/: application.cpp  engine.cpp
acid/src/geometry/: model.cpp
acid/src/platform/Apple/: apple_window.cpp
acid/src/platform/OpenGL/: opengl_buffer.cpp  opengl_graphic_context.cpp  opengl_renderer_api.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_vertex_array.cpp
acid/src/platform/Windows/: windows_window.cpp
acid/src/renderer/: buffer.cpp  graphic_context.cpp  renderer.cpp  renderer2d.cpp  renderer3d.cpp  renderer_api.cpp  renderer_command.cpp  shader.cpp  vertex_array.cpp
acid/src/renderer/camera/: camera.cpp  scene_camera.cpp
acid/src/renderer/light/: material.cpp
acid/src/scene/: scene.cpp
assets/models/: cube.gltf
assets/shaders/: flat_color.shader  gouraud.shader  plain.shader  texture.shader  voxel.shader
assets/shaders/geo2d/: circle.shader  quad.shader
